# BotsFramework-MetaTrader5

./: .gitignore  BotsFramework.toml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/MetaTrader5Service/: broker_settings.py  exceptions.py  service.py
src/MetaTrader5Service/account/: account_info.py
src/MetaTrader5Service/data_models/: data_request.py
src/MetaTrader5Service/position/: position.py
src/MetaTrader5Service/symbol/: symbol_info.py
src/MetaTrader5Service/utils/: clean_data.py
