[metadata]
name = BotsFramework[MetaTrader5]
version = 0.0.1
author = Arian Ventura Rodríguez
author_email = arianventura94@gmail.com
description = Bots Framework for MetaTrader5 Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ventura94/BotsFramework-MetaTrader5
project_urls =
    Bug Tracker = https://github.com/ventura94/BotsFramework-MetaTrader5/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src